fix: Query Sync can now work with '.' in the directories section (#6834)